[package]
name = "kmeans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "3.2.22", features = ["derive"] }
rayon = "1"
